# dbrecord-opaleye

./: .gitignore  .travis-setup.sh  .travis.yml  README.md  dbrecord-opaleye.cabal  stack.yaml
src/Opaleye/: Record.hs
test/: Spec.hs
