name:                dbrecord-opaleye
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mageshb/dbrecord-opaleye#readme
license:             BSD3
license-file:        LICENSE
author:              Magesh B
maintainer:          magesh85@gmail.com
copyright:           © 2016 Magesh B
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Opaleye.DBRecord
  build-depends:       base >= 4.7 && < 5
                     , dbrecord == 0.1.*
                     , opaleye >= 0.4.2
                     , time             >= 1.5.0
                     , template-haskell == 2.11.*
                     , uuid-types        >=1.0.0
                     , case-insensitive  == 1.2.*
--                     , transformers      == 0.5.*
                     , mtl                 == 2.2.*
                     , contravariant       >= 1.4
                     , profunctors         == 5.*
                     , product-profunctors == 0.7.*
                     , postgresql-simple   == 0.5.*
                     , bytestring
                     , aeson
                     , vector
                     , text
  default-language:    Haskell2010

test-suite dbrecord-opaleye-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dbrecord-opaleye
                     , dbrecord == 0.1.*
                     , product-profunctors == 0.7.*
                     , aeson
                     , text
                     , mtl                 == 2.2.*
                     , opaleye
                     , profunctors         == 5.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mageshb/dbrecord-opaleye
